syntax = "proto3";

package payment;

option go_package = "booking-platform/payment-service/proto";

service PaymentService {
    rpc ProcessPayment(ProcessPaymentRequest) returns (ProcessPaymentResponse);
    rpc RefundPayment(RefundPaymentRequest) returns (RefundPaymentResponse);
    rpc GetPaymentStatus(GetPaymentStatusRequest) returns (GetPaymentStatusResponse);
}

message ProcessPaymentRequest {
    string booking_id = 1;
    double amount = 2;
    string currency = 3;
    string payment_method = 4;
}

message ProcessPaymentResponse {
    string payment_id = 1;
    string status = 2;
    string message = 3;
}

message RefundPaymentRequest {
    string payment_id = 1;
    double amount = 2;
    string reason = 3;
}

message RefundPaymentResponse {
    string refund_id = 1;
    string status = 2;
    string message = 3;
}

message GetPaymentStatusRequest {
    string payment_id = 1;
}

message GetPaymentStatusResponse {
    string payment_id = 1;
    string status = 2;
    double amount = 3;
    string created_at = 4;
}
